--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -3,9 +3,10 @@
     <string name="app_name">स्टैटस सवेर</string>
     <string name="enter_your_message">संदेश लिखे</string>
     <string name="button_text_send">संदेश भेजे</string>
-    <string name="top_bar_title" translatable="false">"स्टैटस सेवर "</string>
+    <string name="top_bar_title" translatable="false">"स्टैटस सेवर"</string>
     <string name="phone_number_hint">"फोन "</string>
     <string name="move_forword">"आगे "</string>
     <string name="recent_stories">"नये स्टैटस "</string>
-    <string name="saved_stories">"सुरक्षित किए गये "</string>
+    <string name="saved_stories">"सुरक्षित किए गये"</string>
+    <string name="exit_confirm_text">क्या आपको एप से बाहर जाना है?</string>
 </resources>
