--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="move_forword">move forword</string>
     <string name="recent_stories">Recent Stories</string>
     <string name="saved_stories">Saved Stories</string>
+    <string name="exit_confirm_text">Are you sure you want to exit?</string>
 </resources>
